--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 	font-family: "ralewayregular", Arial, sans-serif;
 }
 
-.main_width {
+.mainWidth {
 	width: 1055px;
 	margin: 0 auto;
 }
@@ -42,7 +42,7 @@ a {
 	color: white;
 }
 
-.color_word {
+.colorWord {
 	color: #26c7a9;
 	font-family: "ralewaybold", Arial, sans-serif;
 }
@@ -63,13 +63,13 @@ header h1 {
 	margin-top: 15px;
 }
 
-.nav_bar {
+.navBar {
 	float: right;
 	margin-top: 10px;
 	text-transform: uppercase;
 }
 
-.nav_bar li {
+.navBar li {
 	display: inline-block;
 	padding-right: 30px;
 	font-size: 12px;
@@ -80,7 +80,6 @@ header h1 {
 /*SLIDER SECTION*/
 
 .slider {
-	height: 400px;
 	background: #cbcfd4; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(white, #cbcfd4); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(white, #cbcfd4); /* For Opera 11.1 to 12.0 */
@@ -123,14 +122,14 @@ header h1 {
 	width: 380px;
 }
 
-.slider_text {
+.sliderText {
 	text-align: center;
 	font-size: 13px;
 	line-height: 20px;
 	width: 380px;
 }
 
-.button_slider {
+.buttonSlider {
 	text-transform: uppercase;
 	text-align: center;
 	font-size: 20px;
@@ -141,4 +140,73 @@ header h1 {
 	background-color: #26c7a9;
 	border-radius: 10px;
 	margin-left: 60px;
+}
+
+/*SECTION WITH PHOTOS*/
+
+.chairs div {
+	display:inline-block;
+	vertical-align: top;
+	margin-top: 30px;
+}
+
+.chairs img {
+	width: 320px;
+	height: 230px;
+	margin-right: 30px;
+}
+
+#whiteBox {
+	border: 1px solid #cbcfd4;
+	height: 260px;
+	width: 320px;
+}
+
+/*PRICES SECTION*/
+.pricePlans {
+    border: 1px solid #cbcfd4;
+    width: 300px;
+    height: 350px;
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.outerCircle {
+    width: 60px;
+    height: 60px;
+    border: 1px solid #cbcfd4;
+    border-radius: 50%;
+    z-index: 10;
+    position: absolute;
+    top: -30px;
+    left: 120px;
+}
+
+.innerCircle {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #cbcfd4;
+    margin-top: 15px;
+    margin-left: 15px;
+
+}
+
+.pricePlans h4 {
+	text-transform: uppercase;
+	margin-top: 40px;
+	text-align: center;
+}
+
+.circle {
+	width: 130px;
+	height: 130px;
+	text-align: center;
+	vertical-align: center;
+	line-height: 130px;
+	border: 1px solid #cbcfd4;
+    border-radius: 50%;
+    margin-left:80px;
+    margin-top: 20px;
 }
