HTML and CSS almost done

--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,10 @@
     src: url('../fonts/normal/raleway-regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/normal/raleway-regular-webfont.woff2') format('woff2'),
          url('../fonts/normal/raleway-regular-webfont.woff') format('woff'),
-         url('../fonts/normal/raleway-regular-webfont.ttf') format('truetype'),
-         url('../fonts/normal/raleway-regular-webfont.svg#ralewayregular') format('svg');
+         url('../fonts/normal/raleway-regular-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+
 }
 
 @font-face {
@@ -18,8 +18,7 @@
     src: url('../fonts/bold/raleway-bold-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/bold/raleway-bold-webfont.woff2') format('woff2'),
          url('../fonts/bold/raleway-bold-webfont.woff') format('woff'),
-         url('../fonts/bold/raleway-bold-webfont.ttf') format('truetype'),
-         url('../fonts/bold/raleway-bold-webfont.svg#ralewaybold') format('svg');
+         url('../fonts/bold/raleway-bold-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -39,7 +38,6 @@
 
 a {
 	text-decoration: none;
-	color: white;
 }
 
 .colorWord {
@@ -74,6 +72,10 @@ header h1 {
 	padding-right: 30px;
 	font-size: 12px;
 	font-weight: bold;
+}
+
+header a {
+	color: white;
 }
 
 
@@ -111,7 +113,7 @@ header h1 {
 
 
 .arrow {
-	color: #26c7a9;
+	color: #29b49f;
 	font-size: 70px;
 }
 
@@ -137,76 +139,371 @@ header h1 {
 	width: 200px;
 	height: 30px;
 	padding: 5px 30px;
-	background-color: #26c7a9;
+	background-color: #24ba9f;
 	border-radius: 10px;
-	margin-left: 60px;
+	margin-left: 80px;
+	color: white;
 }
 
-/*SECTION WITH PHOTOS*/
+/*PRODUCTS SECTION*/
 
-.chairs div {
+.productsImg, .productsText {
 	display:inline-block;
 	vertical-align: top;
 	margin-top: 30px;
+	position: relative;
 }
 
-.chairs img {
+.products img {
 	width: 320px;
 	height: 230px;
 	margin-right: 30px;
 }
 
-#whiteBox {
+.transparentStripe {
+	background-color: rgba(255, 255, 255, 0.5);
+	position: absolute;
+	left: 0px;
+	bottom: 20px;
+	display: block;
+	width: 100%;
+}
+
+.transparentStripe h3, .productsText h3 {
+	border-bottom: 7px solid #22b89f;
+	font-size: 15px;
+	width: 45%;
+	margin-left: 10px;
+	color: black;
+}
+
+.productsText {
 	border: 1px solid #cbcfd4;
 	height: 260px;
 	width: 320px;
 }
 
+.productsText p {
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-right: 20px;
+	font-size: 14px;
+	color: #969696;
+	line-height: 20px;
+}
+
 /*PRICES SECTION*/
+.prices {
+	background-color: #f1f1f1;
+}
+
+.prices h3 {
+	border-bottom: 7px solid #22b89f;
+	width: 330px;
+	color: #565656;
+	text-transform: uppercase;
+	padding-top: 40px;
+}
+
 .pricePlans {
-    border: 1px solid #cbcfd4;
-    width: 300px;
-    height: 350px;
+    border: 2px solid #c6c6c6;
+    width: 330px;
+    height: 500px;
     position: relative;
     display: inline-block;
     vertical-align: top;
+    margin-top: 50px;
+    margin-bottom: 60px;
+    background-color: #f9f9f9;
+    color: #c2c2c2;
+}
+
+#standardPlan {
+	background-color: #13c39d;
+	border: 2px solid #13c39d;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .outerCircle {
     width: 60px;
     height: 60px;
-    border: 1px solid #cbcfd4;
+    border: 2px solid #c6c6c6;
     border-radius: 50%;
-    z-index: 10;
     position: absolute;
     top: -30px;
-    left: 120px;
+    left: 130px;
+    background-color: white;
+}
+
+#standardPlan .outerCircle {
+	border: 2px solid #13c39d;
+	background-color: #13c39d;
 }
 
 .innerCircle {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color: #cbcfd4;
+    background-color: #c6c6c6;
     margin-top: 15px;
     margin-left: 15px;
 
 }
 
-.pricePlans h4 {
+#standardPlan .innerCircle {
+	background-color: white;
+}
+
+.pricePlans p {
 	text-transform: uppercase;
 	margin-top: 40px;
 	text-align: center;
+	font-size: 20px;
+	color: #13c39d;
+	font-weight: bold;
+}
+
+#standardPlan p {
+	color: white;
 }
 
 .circle {
 	width: 130px;
 	height: 130px;
-	text-align: center;
-	vertical-align: center;
-	line-height: 130px;
 	border: 1px solid #cbcfd4;
     border-radius: 50%;
-    margin-left:80px;
+    margin-left:90px;
     margin-top: 20px;
+    background-color: white;
+    text-align: center;
+    vertical-align: middle;
+    
 }
+
+.priceNumber {
+	font-family: "ralewaybold";
+	display: block;
+	padding: 7px;
+	font-size: 40px;
+	margin-top: 20px;
+}
+
+#standardPlan .priceNumber, #standardPlan .priceUnit {
+	color: #13c39d;
+}
+
+.priceNumber sup {
+	font-size: 10px;
+	font-weight: bold;
+}
+
+.priceUnit {
+	font-size: 15px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.pricesButton {
+	text-transform: uppercase;
+	text-align: center;
+	font-size: 15px;
+	width: 80px;
+	height: 18px;
+	padding: 5px 30px;
+	border-radius: 10px;
+	margin-left: 90px;
+	margin-top: 30px;
+	display: inline-block;
+	vertical-align: middle;
+
+}
+
+#basicPlan .pricesButton, #advancePlan .pricesButton {
+	background-color: #13c39d;
+	color: white;
+}
+
+#standardPlan .pricesButton {
+	background-color: white;
+	color: #13c39d;
+}
+
+.hidden {
+	visibility: hidden;
+}
+
+.pricePlans ul {
+	list-style: outside none none;
+	text-align: center;
+	width: 100%;
+	padding: 0px;
+	margin-top: 30px;
+}
+
+.pricePlans ul li {
+	font-size: 20px;
+	line-height: 40px;
+}
+
+#basicPlan li:nth-child(2n+1), #advancePlan li:nth-child(2n+1) {
+	background-color: #e4e4e4;
+}
+
+#basicPlan li:nth-child(2n+2), #advancePlan li:nth-child(2n+2) {
+	background-color: #f1f1f1;
+}
+
+#standardPlan li:nth-child(2n+1) {
+	background-color: white;
+}
+
+#standardPlan li:nth-child(2n+2) {
+	background-color: #f1f1f1;
+}
+
+/*CONTACT SECTION*/
+
+.contact h3 {
+	border-bottom: 7px solid #22b89f;
+	width: 330px;
+	color: #565656;
+	text-transform: uppercase;
+	padding-top: 20px;
+}
+
+.rightForm, .leftForm {
+	display: inline-block;
+	vertical-align: top;
+}
+
+.rightForm {
+	width: 400px;
+}
+
+.leftForm {
+	width: 630px;
+}
+
+input[type="text"], textarea {
+	border: 1px solid #a6e3d3;
+	padding: 10px;
+	margin-top: 20px;
+	width: 95%;
+	font-size: 30px;
+}
+
+::-webkit-input-placeholder {
+  	color: rgba(214, 214, 214, 0.7);
+  	font-size: 30px;
+  	font-weight: 100;
+}
+
+	
+::-moz-placeholder {  /* Firefox 19+ */
+	color: rgba(214, 214, 214, 0.7);
+  	font-size: 30px;
+  	font-weight: 100; 
+}
+	
+:-ms-input-placeholder {  
+	color: rgba(214, 214, 214, 0.7);
+  	font-size: 30px;
+  	font-weight: 100;  
+}
+
+
+textarea {
+	max-width: 630px;
+}
+
+.rightForm img {
+	margin-left: 80px;
+}
+
+input[type="checkbox"] {
+	-webkit-appearance: none;
+	display: block;
+	width: 45px;
+	height: 45px;
+	border: 1px solid #a6e3d3;
+	margin-left: 40px;
+}
+
+input[type="checkbox"]:checked {
+	background-image: url("../images/form_ok.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+input[type="checkbox"], .checkbox label {
+	display: inline-block;
+	vertical-align: middle;
+	margin-top: 20px;
+}
+
+.checkbox label {
+	width: 300px;
+	color: #c9c9c9;
+  	font-size: 17px; 
+}
+
+input[type="submit"] {
+	text-transform: uppercase;
+	text-align: center;
+	font-size: 25px;
+	font-family: "ralewaybold";
+	letter-spacing: 2px;
+	vertical-align: middle;
+	width: 340px;
+	height: 60px;
+	line-height: 60px;
+	margin-left: 40px;
+	margin-top: 20px;
+	background-color: #24ba9f;
+	border-radius: 10px;
+	color: white;
+	border: none;
+}
+
+/*FOOTER SECTION*/
+
+footer {
+	padding-top: 60px;
+}
+
+.leftFooter {
+	color: #969696;
+	float: left;
+}
+
+.rightFooter {
+	float: right;
+	width: 400px;
+}
+
+.social {
+	float: left;
+	display: inline-block;
+}
+
+.social li {
+	display: inline-block;
+}
+
+.logo {
+	color: #969696;
+	font-size: 20px;
+	line-height: 30px;
+	display: inline-block;
+	float: right;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.highlight {
+	font-family: "ralewaybold";
+}
+
+
+
