--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,8 @@ header h1 {
 	float: right;
 	margin-top: 10px;
 	text-transform: uppercase;
+	position: relative;
+	display: inline-block;
 }
 
 .navBar li {
@@ -72,6 +74,43 @@ header h1 {
 	padding-right: 30px;
 	font-size: 12px;
 	font-weight: bold;
+}
+
+#aboutUs {
+	display: none;
+	position: absolute;
+	top: 40px;
+	left: 20px;
+	background-color: black;
+	border-style: solid;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	
+}
+
+#aboutUs > li {
+	color: white;
+	display: block;
+	text-transform: capitalize;
+	font-size: 15px;
+	text-align: left;
+	font-weight: 200;
+	margin: 7px;
+	float: none;
+	padding-right: 0;
+}
+
+#aboutUs li:first-child a:after {
+	content: '';
+	position: absolute;
+	left: 30px;
+	top: -8px;
+	width: 0;
+	height: 0;
+	border-left: 20px solid transparent;
+	border-right: 20px solid transparent;
+	border-bottom: 10px solid black;
 }
 
 header a {
@@ -89,32 +128,56 @@ header a {
     clear: both;
 }
 
-#box1, #box4 {
-	width:40px;
-}
-
-#box2, #box3 {
-	width: 400px;
-}
 
 .slider div {
 	display: inline-block;
-	vertical-align: middle;
-	margin-top: 35px;
+	vertical-align: top;
 }
 
-#box3{
+.box1, .box4 {
+	width:40px;
+	margin-top: 160px;
+}
+
+
+.box2, .box3 {
+	width: 400px;
+	margin-top: 80px;
+	margin-bottom: 25px;
+}
+
+
+.box3{
 	margin-left: 60px;
 }
 
-#box4 {
-	margin-left: 100px;
+.box4 {
+	margin-left: 60px;
+}
+
+
+#sliderContainer ul {
+	list-style: none;
+}
+
+#sliderContainer li {
+	display: none;
+	-webkit-transition:all 1.0s ease-in-out;
+	-moz-transition:all 1.0s ease-in-out;
+	-o-transition:all 1.0s ease-in-out;
+	transition:all 1.0s ease-in-out;
+}
+
+
+#sliderContainer .visible {
+	display: inline-block;
 }
 
 
 .arrow {
 	color: #29b49f;
 	font-size: 70px;
+	cursor: pointer;
 }
 
 .slider h2 {
@@ -129,16 +192,17 @@ header a {
 	font-size: 13px;
 	line-height: 20px;
 	width: 380px;
+	margin-bottom: 40px;
 }
 
 .buttonSlider {
 	text-transform: uppercase;
 	text-align: center;
 	font-size: 20px;
-	font-weight: bold;
+	font-weight: 600;
 	width: 200px;
 	height: 30px;
-	padding: 5px 30px;
+	padding: 8px 30px;
 	background-color: #24ba9f;
 	border-radius: 10px;
 	margin-left: 80px;
@@ -218,7 +282,7 @@ header a {
     color: #c2c2c2;
 }
 
-#standardPlan {
+.standardPlan {
 	background-color: #13c39d;
 	border: 2px solid #13c39d;
 	margin-left: 10px;
@@ -236,7 +300,7 @@ header a {
     background-color: white;
 }
 
-#standardPlan .outerCircle {
+.standardPlan .outerCircle {
 	border: 2px solid #13c39d;
 	background-color: #13c39d;
 }
@@ -251,7 +315,7 @@ header a {
 
 }
 
-#standardPlan .innerCircle {
+.standardPlan .innerCircle {
 	background-color: white;
 }
 
@@ -264,7 +328,7 @@ header a {
 	font-weight: bold;
 }
 
-#standardPlan p {
+.standardPlan p {
 	color: white;
 }
 
@@ -289,7 +353,7 @@ header a {
 	margin-top: 20px;
 }
 
-#standardPlan .priceNumber, #standardPlan .priceUnit {
+.standardPlan .priceNumber, .standardPlan .priceUnit {
 	color: #13c39d;
 }
 
@@ -319,12 +383,12 @@ header a {
 
 }
 
-#basicPlan .pricesButton, #advancePlan .pricesButton {
+.basicPlan .pricesButton, .advancePlan .pricesButton {
 	background-color: #13c39d;
 	color: white;
 }
 
-#standardPlan .pricesButton {
+.standardPlan .pricesButton {
 	background-color: white;
 	color: #13c39d;
 }
@@ -346,21 +410,22 @@ header a {
 	line-height: 40px;
 }
 
-#basicPlan li:nth-child(2n+1), #advancePlan li:nth-child(2n+1) {
+.basicPlan li:nth-child(2n+1), .advancePlan li:nth-child(2n+1) {
 	background-color: #e4e4e4;
 }
 
-#basicPlan li:nth-child(2n+2), #advancePlan li:nth-child(2n+2) {
+.basicPlan li:nth-child(2n+2), .advancePlan li:nth-child(2n+2) {
 	background-color: #f1f1f1;
 }
 
-#standardPlan li:nth-child(2n+1) {
+.standardPlan li:nth-child(2n+1) {
 	background-color: white;
 }
 
-#standardPlan li:nth-child(2n+2) {
+.standardPlan li:nth-child(2n+2) {
 	background-color: #f1f1f1;
 }
+
 
 /*CONTACT SECTION*/
 
@@ -394,20 +459,20 @@ input[type="text"], textarea {
 }
 
 ::-webkit-input-placeholder {
-  	color: rgba(214, 214, 214, 0.7);
+  	color: rgba(214, 214, 214, 0.9);
   	font-size: 30px;
   	font-weight: 100;
 }
 
 	
 ::-moz-placeholder {  /* Firefox 19+ */
-	color: rgba(214, 214, 214, 0.7);
+	color: rgba(214, 214, 214, 0.9);
   	font-size: 30px;
   	font-weight: 100; 
 }
 	
 :-ms-input-placeholder {  
-	color: rgba(214, 214, 214, 0.7);
+	color: rgba(214, 214, 214, 0.9);
   	font-size: 30px;
   	font-weight: 100;  
 }
@@ -423,32 +488,37 @@ textarea {
 
 input[type="checkbox"] {
 	-webkit-appearance: none;
-	display: block;
+	-moz-appearance: none;
 	width: 45px;
 	height: 45px;
 	border: 1px solid #a6e3d3;
 	margin-left: 40px;
+	background-color: white;
 }
 
 input[type="checkbox"]:checked {
+	-webkit-appearance: none;
+	-moz-appearance: none;
 	background-image: url("../images/form_ok.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 }
 
-input[type="checkbox"], .checkbox label {
+input[type="checkbox"], .checkboxContact label {
+	-webkit-appearance: none;
+	-moz-appearance: none;
 	display: inline-block;
 	vertical-align: middle;
 	margin-top: 20px;
 }
 
-.checkbox label {
+.checkboxContact label {
 	width: 300px;
 	color: #c9c9c9;
   	font-size: 17px; 
 }
 
-input[type="submit"] {
+.contactButton {
 	text-transform: uppercase;
 	text-align: center;
 	font-size: 25px;
@@ -505,5 +575,135 @@ footer {
 	font-family: "ralewaybold";
 }
 
+/*PLANNER SECTION*/
 
+.planner {
+	background-color: #f9f9f9;
+}
+
+.planner h3 {
+	border-bottom: 7px solid #22b89f;
+	color: #565656;
+	text-transform: uppercase;
+	padding-top: 20px;
+	width: 28%;
+}
+
+.h3left {
+	float: left;
+}
+
+.h3right {
+	float: right;
+	text-align: right;
+}
+
+.planner form {
+	clear: both;
+	display: inline-block;
+}
+
+.leftPlanner, .middlePlanner, .rightPlanner {
+	display: inline-block;
+	width: 30%;
+	vertical-align: top;
+	margin-bottom: 50px;
+}
+
+.leftPlanner, .rightPlanner {
+	margin-top: 40px;
+}
+
+.planner select {
+	border: 1px solid #a6e3d3;
+	width: 100%;
+	font-size: 25px;
+	padding: 5px;
+	color: rgba(214, 214, 214, 1);
+	margin-bottom: 15px;
+}
+
+.checkboxPlanner input[type="checkbox"] {
+	margin-left: 0;
+}
+
+.checkboxPlanner input[type="checkbox"], .checkboxPlanner label {
+	display: inline-block;
+	vertical-align: bottom;
+}
+
+.checkboxPlanner label {
+	color: #aaaaaa;
+	font-weight: 100;
+	font-size: 30px;
+}
+
+.middlePlanner img {
+	vertical-align: bottom;
+	margin-left: 25%;
+	text-align: center;
+}
+
+.rightPlanner table {
+	width: 100%;
+	background-color: white;
+	margin-left: 100px;
+	border-collapse: collapse;
+}
+
+
+.rightPlanner th, .rightPlanner td {
+	padding: 10px;
+	width: 50%;
+}
+
+.rightPlanner th {
+	text-align: left;
+	font-size: 18px;
+	color: #24ba9f;
+}
+
+.rightPlanner thead th:nth-child(even), .rightPlanner tbody td:nth-child(even) {
+	color: #24ba9f;
+	border-left: 1px solid #d5d5d5;
+	text-align: right;
+}
+
+.rightPlanner td:nth-child(odd) {
+	color: #565656;
+	text-align: left;
+}
+
+.rightPlanner tfoot td {
+	border-top: 1px solid #d5d5d5;
+	padding-bottom: 20px;
+}
+
+.rightPlanner tfoot tr td:first-child {
+	text-transform: uppercase;
+	border-top: 1px solid #d5d5d5;
+	border-left: none!important;
+}
+
+.buttonPlanner {
+	text-transform: uppercase;
+	text-align: center;
+	font-size: 25px;
+	font-family: "ralewaybold";
+	letter-spacing: 2px;
+	vertical-align: middle;
+	width: 280px;
+	height: 60px;
+	line-height: 60px;
+	margin-left: 120px;
+	margin-top: 20px;
+	background-color: #24ba9f;
+	border-radius: 10px;
+	color: white;
+	border: none;
+} 
+
+/*NAPRAWIć CZCIONKI W FIREFOXIE
+NAPRAWIć CHECKBOX W FIREFOXIE
+SPRAWDZIć INNE PRZEGLąDARKI? --> SAFARI, EDGE, IE*/
 
